[gd_scene load_steps=11 format=3 uid="uid://snlj6e15d5wg"]

[ext_resource type="Texture2D" uid="uid://ofwc6ii5i35h" path="res://asset/ui/pick_ui.png" id="1_ewbh5"]
[ext_resource type="Script" uid="uid://vu7mtihjno51" path="res://script/mask_ui.gd" id="1_ykyxb"]
[ext_resource type="Texture2D" uid="uid://ccsrinp5esawp" path="res://asset/mask/water_mask.png" id="2_ykyxb"]
[ext_resource type="Texture2D" uid="uid://rj201wbxtatm" path="res://asset/mask/wind_mask.png" id="3_rf7mn"]
[ext_resource type="Texture2D" uid="uid://5mqvouwbed0t" path="res://asset/ui/water_mask_ui.png" id="3_t35ak"]
[ext_resource type="Texture2D" uid="uid://cqohf4r42fi8v" path="res://asset/ui/wind_mask_ui.png" id="4_kc65w"]
[ext_resource type="Texture2D" uid="uid://waeoe8b7nl6m" path="res://asset/mask/joker_mask.png" id="7_aa02w"]
[ext_resource type="Texture2D" uid="uid://b3jt1jn65qeyc" path="res://asset/ui/joker_mask_ui.png" id="8_gv6nk"]
[ext_resource type="Texture2D" uid="uid://0afgney5i75g" path="res://asset/mask/spirit_mask.png" id="8_pwrun"]
[ext_resource type="Texture2D" uid="uid://cs6antnughaou" path="res://asset/ui/spirit_mask_ui.png" id="9_gv6nk"]

[node name="maskUi" type="Control"]
layout_mode = 3
anchor_left = 0.271701
anchor_right = 0.810764
anchor_bottom = 0.967593
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ykyxb")
metadata/_edit_use_anchors_ = true

[node name="mask1" type="TextureRect" parent="."]
layout_mode = 0
anchor_left = 0.333333
anchor_top = 0.0861244
anchor_right = 0.655395
anchor_bottom = 0.373206
offset_right = -3.05176e-05
texture = ExtResource("1_ewbh5")
metadata/_edit_use_anchors_ = true

[node name="mask1But" type="TextureButton" parent="mask1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.115002
anchor_top = 0.127778
anchor_right = 0.864999
anchor_bottom = 0.849999
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("3_rf7mn")
texture_hover = ExtResource("4_kc65w")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="mask2" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.331723
anchor_top = 0.500797
anchor_right = 0.653784
anchor_bottom = 0.787879
texture = ExtResource("1_ewbh5")
metadata/_edit_use_anchors_ = true

[node name="mask2But" type="TextureButton" parent="mask2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.130001
anchor_top = 0.111112
anchor_right = 0.88
anchor_bottom = 0.83333
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("2_ykyxb")
texture_hover = ExtResource("3_t35ak")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="mask3" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0483092
anchor_top = 0.266348
anchor_right = 0.37037
anchor_bottom = 0.553429
texture = ExtResource("1_ewbh5")
metadata/_edit_use_anchors_ = true

[node name="mask3But" type="TextureButton" parent="mask3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125002
anchor_top = 0.155554
anchor_right = 0.875002
anchor_bottom = 0.877777
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("7_aa02w")
texture_hover = ExtResource("8_gv6nk")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[node name="mask4" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.610306
anchor_top = 0.283892
anchor_right = 0.932367
anchor_bottom = 0.570973
offset_bottom = 3.05176e-05
texture = ExtResource("1_ewbh5")
metadata/_edit_use_anchors_ = true

[node name="mask4But" type="TextureButton" parent="mask4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.12
anchor_top = 0.116665
anchor_right = 0.87
anchor_bottom = 0.838888
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("8_pwrun")
texture_hover = ExtResource("9_gv6nk")
stretch_mode = 0
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="mask1/mask1But" to="." method="_on_mask_1_but_pressed"]
[connection signal="pressed" from="mask2/mask2But" to="." method="_on_mask_2_but_pressed"]
[connection signal="pressed" from="mask3/mask3But" to="." method="_on_mask_3_but_pressed"]
[connection signal="pressed" from="mask4/mask4But" to="." method="_on_mask_4_but_pressed"]
